--- a/Project html/media.css
+++ b/Project html/media.css
@@ -1,6 +1,429 @@
-@media screen and (max-width: 375px){
-    .date__information{
-        background: #00CCCC;
+@media screen and (max-width: 330px) {
+    .header__wrap {
+        width: 315px;
+        height: 36px;
+    }
+
+    .nav-item{
+        display: flex;
+        color: #FFFFFF;
+    }
+
+    .nav-link,.nav-link:focus, .nav-link:hover{
+        color: #FFFFFF;
+    }
+
+    .header__wrap p{
+        height: 36px;
+        color: #FFFFFF;
+        font-size: 14px;
+        line-height: 16px;
+        padding: 12px 0 0 15px;
+    }
+
+    .header__nav__left {
+        color: #FFFFFF;
+        display: flex;
+        column-gap: 20px;
+        font-weight: 500;
+        font-size: 8px;
+        line-height: 16px;
+        padding: 10px 0 10px 1px;
 
     }
+
+    .header__nav__left,.header__nav__right {
+        display: none;
+    }
+
+    .header__top {
+        width: 100px;
+        margin: 0;
+    }
+
+    .header__top2, .header__top3, .item {
+        display: none;
+    }
+
+    .header__top img {
+        margin-left: 80px;
+    }
+
+    .header__top h1 {
+        font-weight: revert;
+        width: 120px
+    }
+
+    .header__top__text5 {
+        margin-left: 100px;
+        margin-top: 0;
+    }
+
+    .header__top4 {
+        margin-top: 90px;
+        margin-right: -190px;
+        position: relative;
+        bottom: 45px;
+        left: 20px;
+    }
+
+    .header__top__text4 p {
+        font-size: 10px;
+        height: 12px;
+
+    }
+
+    .header__top__text5 p {
+        font-size: 13px;
+    }
+
+    .header__top__text5 > p.xxx {
+        font-size: 10px;
+    }
+
+    .header__bottom button {
+        width: 35px;
+        height: 39px;
+        margin-left: 10px;
+    }
+
+    .header__bottom button p {
+        display: none;
+    }
+
+.header__bottom> img.btn_stick{
+    margin-left: 12px;
 }
+    .header__bottom__search {
+        margin-left: 30px;
+    }
+
+    .input-group {
+        width: 240px;
+    }
+
+    .input-group button {
+        width: 30px;
+        height: 40px;
+    }
+
+    .input-group button img {
+        display: block;
+
+    }
+
+    .input-group button a {
+        display: none;
+
+    }
+
+    .carousel {
+        width: 300px;
+        margin-left: 10px;
+        margin-top: 25px;
+        height: 270px;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .menu__right {
+        margin: 25px 0 0 2px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .carousel__text__main {
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+
+    .carousel__text h1 {
+        font-size: 25px;
+    }
+
+    .carousel__text p {
+        font-size: 15px;
+    }
+
+    .carousel__text2 h2 {
+        font-size: 20px;
+        line-height: 20px;
+    }
+
+    .carousel__text2 {
+        margin-top: 0;
+        flex-direction: column-reverse;
+    }
+
+    .carousel__text2 p {
+        font-size: 15px;
+        margin: 0;
+    }
+
+    .carousel-item > img {
+        width: 130px;
+        height: 110px;
+        margin-left: 150px;
+        margin-top: 50px;
+    }
+
+    .menu__item {
+        display: block;
+        margin-left: 0;
+        margin-top: 20px;
+
+    }
+
+    .item__block {
+        width: 319px;
+    }
+
+    .item__block__image img {
+        margin-left: 210px;
+        margin-top: 30px;
+        width: 105px;
+        height: 127px;
+    }
+
+    .item__block__image2 img {
+        margin-left: 188px;
+        margin-top: 20px;
+        width: 135px;
+        height: 147px;
+    }
+
+    .item__block__image3 img {
+        margin-left: 178px;
+        margin-top: 20px;
+        width: 145px;
+        height: 157px;
+    }
+
+    .image__arrow img, .image__arrow2 img {
+        display: none;
+    }
+
+    .button__menu {
+        margin-left: 0;
+        margin-top: 20px;
+        column-gap: 10px;
+    }
+
+    .btn__menu button {
+        width: 110px;
+    }
+
+    .btn__menu2 button {
+        width: 80px;
+    }
+
+    .btn__menu3 button {
+        width: 110px;
+    }
+
+    .menu__katalog {
+        margin-left: 20px;
+        flex-wrap: wrap;
+        display: flex;
+        row-gap: 40px;
+    }
+
+    .image__media {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 8px;
+    }
+
+    .image__text {
+        display: flex;
+        column-gap: 22px;
+
+    }
+
+    .image__text p {
+        width: 40px;
+        height: 12px;
+        font-weight: normal;
+        font-size: 13px;
+        line-height: 12px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        color: #0F2438;
+    }
+
+    .image__media__text p {
+        margin: 6px 0 0 15px;
+    }
+
+    .image__media__text2 p {
+        margin: 6px 0 0 9px;
+    }
+
+    .image__media__text3 p {
+        margin: 6px 0 0 30px;
+    }
+
+    .image__media__text4 p {
+        margin: 6px 0 0 17px;
+    }
+
+    .menu__katalog {
+        display: none;
+    }
+
+    .menu__katalog__media {
+        display: flex;
+    }
+
+    .item__katalog > img.image__katalog {
+        width: 140px;
+        height: 127px;
+    }
+
+    .item__katalog2 > img.image__katalog {
+        width: 140px;
+        height: 127px;
+    }
+
+    img.image__click {
+        display: none;
+    }
+
+    .item__katalog__text2 p {
+        font-size: 18px;
+    }
+
+    .item__katalog2 {
+        margin-top: 1px;
+    }
+
+    .item__katalog__text3-part2 p {
+        font-size: 18px;
+    }
+
+    .item__katalog__text3-part2 > p.katalog__text2-part2 {
+        font-size: 13px;
+    }
+
+    .item__katalog__click img {
+        margin-left: 6px;
+        margin-right: 6px;
+    }
+
+    .menu__border {
+        display: none;
+    }
+
+    .menu__katalog__media {
+        margin-top: 20px;
+    }
+
+    .menu__border__media {
+        width: 290px;
+        height: 1px;
+        background: #E1E5F8;
+        margin: 30px 25px 30px 25px;
+    }
+
+.last__border{
+    display: none;
+}
+
+.last__border__media{
+    display: block;
+    margin-top: 0;
+
+}
+
+.date{
+    position: center;
+    right: 0;
+    margin-top: 250px;
+    margin-left: 8px;
+}
+
+.date__information{
+    height: 1050px;
+    margin-top: -150px;
+}
+
+.date p{
+    margin-top: 10px;
+}
+
+.name p{
+    margin-left: 8px;
+    margin-top:50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .footer{
+        display: block;
+        height: 1500px;
+    }
+
+    .title__left p{
+        margin-left: 8px;
+    }
+
+    .title__left{
+        margin-top: 20px;
+    }
+
+    .title__right{
+        display: block;
+        margin-left: 8px;
+    }
+
+    .title__text{
+        display: block;
+        margin-top: 140px;
+    }
+
+    .title__text2{
+        margin-top:50px ;
+    }
+
+    .title__right2{
+        margin-left: 8px;
+        padding-top: 100px;
+    }
+
+    .title__name3 img{
+        margin-left: 8px;
+    }
+
+    .input-group2 button{
+        background: #005BB9;
+        color: #FFFFFF;
+        width: 110px;
+        border: none;
+    }
+
+    .image__social{
+        margin-left: 8px;
+        margin-top: 20px;
+    }
+    .text__bottom-fn{
+        font-size: 14px;
+        margin-left: 8px;
+        margin-top: 1150px;
+    }
+
+}
+
